<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.djden.reminder.RepeatDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/black"
        android:text="@string/repeat"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <ListView
        android:id="@+id/repeat_dialog_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/repeat_dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right|top"
            android:background="@drawable/button_selector"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/repeat_dialog_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right|top"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_selector"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
