<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_fon"
    tools:context="com.example.djden.reminder.ReminderEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/header"
            android:padding="3dp"
            android:text="@string/title_edit_reminder"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:id="@+id/reminder_edit_liner_layout_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/reminder_edit_msg"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/editbox_selector"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:textCursorDrawable="@drawable/cursor_black" />

                <ImageButton
                    android:id="@+id/reminder_edit_button_delete_msg_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="onClickClearMsg"
                    android:padding="10dp"
                    android:src="@drawable/del_button_selector" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reminder_edit_liner_layout_datetime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reminder_edit_date"
                    style="@style/EditButton"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.4"
                    android:drawableStart="@drawable/icon_calendar"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/reminder_edit_time"
                    style="@style/EditButton"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5.0dip"
                    android:layout_weight="0.6"
                    android:drawableStart="@drawable/icon_clock"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/time" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="onClickClearDateTime"
                    android:padding="10.0dip"
                    android:src="@drawable/del_button_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reminder_edit_repeat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="NONE"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/reminder_edit_repeat_txt"
                    style="@style/EditButton"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.4"
                    android:drawableStart="@drawable/icon_period"
                    android:onClick="onClickSelectRepeat"
                    android:text="@string/repeat_none"
                    android:textAlignment="center" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="onClickClearRepeat"
                    android:padding="10.0dip"
                    android:src="@drawable/del_button_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reminder_edit_is_sound_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/sound_on"
                    android:textColor="@drawable/editbutton_text_color"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/reminder_edit_is_sound_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:button="@mipmap/checkbox_on"
                    android:checked="true"
                    android:onClick="onClickCheckIsSound"
                    android:padding="0dp"
                    android:scaleX="0.7"
                    android:scaleY="0.7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reminder_edit_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/button_selector"
                    android:onClick="onClickCancel"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/reminder_edit_save"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button_selector"
                    android:enabled="false"
                    android:onClick="onClickSave"
                    android:text="@string/save"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
