<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_fon"
    tools:context="com.example.djden.reminder.RemindersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/header"
            android:padding="3dp"
            android:text="@string/all_reminders"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <android.support.design.widget.TabLayout
                android:id="@+id/reminder_tab_panel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:tabBackground="@drawable/tab_selector"
                app:tabIndicatorHeight="0dp"
                app:tabTextAppearance="@style/TabPanel">


                <android.support.design.widget.TabItem
                    android:id="@+id/reminder_tab_item_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tab_active" />

                <android.support.design.widget.TabItem
                    android:id="@+id/reminder_tab_item_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tab_inactive" />

            </android.support.design.widget.TabLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/tab_line" />

            <FrameLayout
                android:id="@+id/reminder_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/paper_corner" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/reminder_corner_right"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="bottom|end"
        android:background="@drawable/corner_right" />

    <ImageView
        android:id="@+id/reminder_corner_left"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="bottom|start"
        android:background="@drawable/corner_left"
        android:visibility="invisible" />


</android.support.design.widget.CoordinatorLayout>
